package cpp.logic.parser;public interface Parser {
}
